Allow security truth tests to inspect the internal DRDA TLS implementation